# obenmatrix

./: .gitignore  AGENTS.md  Cargo.toml  PRD.md  README.md  create_bind_task  dump-chat-20260602-045949-20260602-050228.json  implementation_plan.md  test_into
oben-agent/: Cargo.toml
oben-agent/src/: agent.rs  agent_builder.rs  agent_registry.rs  budget.rs  callbacks.rs  compact.rs  compact_context.rs  compression.rs  concurrent_dispatch.rs  context.rs  conversation.rs  delegate.rs  error_classifier.rs  event_bus.rs  fallback.rs  hooks.rs  interaction.rs  interrupt.rs  interrupt_hub.rs  lib.rs  memory_tools.rs  message_sanitize.rs  nudge.rs  post_turn_hook.rs  prompt.rs  retry.rs  stream_processor.rs  system_prompt.rs  system_prompt_cache.rs  transport.rs  turn_executor.rs
oben-agent/src/callbacks/: mod.rs
oben-agent/src/coordinator/: config.rs  mod.rs  termination.rs  tree.rs
oben-agent/src/hooks/: adapters.rs  kind.rs  runtime.rs  tui.rs
oben-agent/tests/: delegate_tests.rs  reset_session.rs  session_rotation.rs
oben-cli/: Cargo.toml
oben-cli/src/: cli.rs  dispatch.rs  lib.rs  main.rs
oben-cli/src/coordinator/: cli.rs  mod.rs
oben-config/: Cargo.toml
oben-config/src/: config.rs  defaults.rs  env.rs  lib.rs  mixture_of_agents.rs  plugin_config.rs  wizard.rs
oben-core/: Cargo.toml
oben-core/src/: budget.rs  compression.rs  context.rs  conversation.rs  lib.rs  prompt.rs  transport.rs
oben-cron/: Cargo.toml
oben-cron/services/: oben-cron.service  org.obenalien.cron.plist
oben-cron/src/: http.rs  jobs.rs  lib.rs  main.rs  schedule.rs  server.rs
oben-curator/: Cargo.toml
oben-curator/src/: cron_rewrite.rs  curator.rs  lib.rs  lifecycle.rs  llm_runner.rs  reconciler.rs  report.rs  usage.rs
oben-gateway/: Cargo.toml
oben-gateway/src/: alerting.rs  circuit_breaker.rs  coordinator.rs  delivery.rs  diagnostics.rs  discord_adapter.rs  dispatcher.rs  fallback.rs  gateway.rs  health_check.rs  lib.rs  logging.rs  main.rs  memory_monitor.rs  messaging.rs  metrics.rs  pairing.rs  platform.rs  qq_bot.rs  qq_onboard.rs  qq_protocol.rs  rate_limiter.rs  router.rs  slack_adapter.rs  slash_commands.rs  state_persistence.rs  sticker_cache.rs  telegram_adapter.rs  webhooks.rs  whatsapp_adapter.rs
oben-gateway/tests/: multi_agent_integration.rs
oben-goals/: Cargo.toml
oben-goals/src/: goal_loop.rs  goal_manager.rs  goal_store.rs  judge.rs  lib.rs  plan.rs  plan_parser.rs  plan_state.rs
oben-goals/src/goal_loop/: goal_state.rs
oben-goals/src/judge/: verdict.rs
oben-goals/tests/: plan_node_roundtrip.rs  plan_state_roundtrip.rs
oben-memory/: Cargo.toml
oben-memory/src/: lib.rs  manager.rs  search.rs  skill_curation.rs
oben-models/: Cargo.toml
oben-models/src/: lib.rs  messages.rs  model_catalog.rs  provider_registry.rs  providers.rs  session.rs  skills.rs  tools.rs
oben-models/tests/: message_roundtrip.rs  model_info_roundtrip.rs  provider_registry.rs  session_roundtrip.rs
oben-plugin/: Cargo.toml
oben-plugin/src/: cli_command.rs  config.rs  discovery.rs  hook.rs  lib.rs  manager.rs  manifest.rs  message_injector.rs  mock_provider.rs  plugin_kind.rs  provider.rs  slash_command.rs  whitelist.rs
oben-scenario-test/: Cargo.toml
oben-scenario-test/src/: lib.rs
oben-scenario-test/tests/: live_session.rs  live_tools.rs  live_transport.rs
oben-sessions/: Cargo.toml
oben-sessions/src/: lib.rs  manager.rs  mem_session.rs  memory_provider.rs  messages.rs  search.rs  session.rs  session_store.rs  skill_curation.rs
oben-sessions/tests/: memory_provider_test.rs
oben-skills/: Cargo.toml
oben-skills/src/: backup.rs  bundle_installer.rs  bundles.rs  catalog.rs  category_manager.rs  commands.rs  enable_disable.rs  guard.rs  hub.rs  info.rs  lib.rs  lifecycle_manager.rs  lister.rs  loader.rs  local_installer.rs  provenance.rs  remover.rs  skill_preprocessing.rs  sync.rs  system.rs  updater.rs  usage_tracker.rs
oben-skills/tests/: skills_directory.rs
oben-tools/: Cargo.toml
oben-tools/src/: browser.rs  clarify.rs  code_execution.rs  computer_use.rs  cron_delivery.rs  cronjob.rs  delegate.rs  file_sync.rs  homeassistant.rs  image_gen.rs  kanban.rs  lib.rs  mcp_client.rs  memory.rs  mixture_of_agents.rs  osv_check.rs  patch.rs  read_write.rs  registry.rs  search.rs  search_files.rs  shell.rs  skill.rs  stt.rs  terminal.rs  todo.rs  toolset_filter.rs  tts.rs  video_gen.rs  vision_analyze.rs  voice.rs  web.rs  web_extract.rs
oben-transport/: Cargo.toml
oben-transport/src/: anthropic_messages.rs  base.rs  chat_completions.rs  dispatch.rs  gemini.rs  lib.rs  model_normalize.rs  registry.rs  text_tool_parser.rs
oben-transport/tests/: anthropic_messages_test.rs  integration.rs  live_llm_test.rs
oben-tui/: Cargo.toml
oben-tui/assets/: splash.txt
oben-tui/src/: app.rs  clipboard.rs  coordinator.rs  history.rs  image.rs  lib.rs
oben-tui/src/commands/: mod.rs
oben-tui/src/coordinator/: mod.rs
oben-tui/src/event/: mod.rs
oben-tui/src/panels/: chat.rs  config.rs  mod.rs  sessions.rs  setup.rs  splash.rs
oben-tui/src/shared/: agent_state.rs  mod.rs
oben-tui/src/turn/: controller.rs  event.rs  mod.rs  stream_buffer.rs  turn_state.rs
oben-tui/src/widgets/: conversation.rs  input_bar.rs  layout.rs  message_display.rs  message_renderer.rs  mod.rs  role_style.rs  style.rs  subagent_accordion.rs  subagent_detail.rs  todo_parser.rs
oben-utils/: Cargo.toml
oben-utils/src/: advisory.rs  checkpoint.rs  clipboard.rs  credential_pool.rs  debug.rs  env_utils.rs  file_safety.rs  lib.rs  logging.rs  path_security.rs  pricing.rs  rate_limit.rs  redact.rs  terminal.rs  trajectory.rs  url_safety.rs
oben-utils/tests/: table_format.rs
oben-wasm/: Cargo.toml
oben-wasm/examples/example-plugin/: .platform.json  (+4 more)
oben-wasm/src/: bridge.rs  command.rs  discover.rs  error.rs  hook_bridge.rs  hook_registry.rs  host.rs  lib.rs  lifecycle.rs  loader.rs  plugin_context.rs  runtime.rs  tool.rs  wasm_hooks.rs
oben-wasm/tests/: basic_compilation.rs  e2e_plugin_load.rs  hook_bridge_test.rs  it_plugin_load.rs
oben-wasm/wit/: hook.wit  plugin.wit
(+150 files in other folders)
