[workspace]
members = [
    "oben-core",
    "oben-transport",
    "oben-models",
    "oben-tools",
    "oben-memory",
    "oben-skills",
    "oben-gateway",
    "oben-config",
    "oben-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Nous Research"]
repository = "https://github.com/bowfeng/obenagent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
itertools = "0.14"
futures = "0.3"
dirs = "5"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
textwrap = "0.16"
tempfile = "3"
ctor = "0.2"

[package]
name = "obenagent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The self-improving AI agent — Rust port of Hermes Agent"

[dependencies]
oben-core = { path = "oben-core" }
oben-config = { path = "oben-config" }
oben-models = { path = "oben-models" }
oben-tools = { path = "oben-tools" }
oben-skills = { path = "oben-skills" }
oben-memory = { path = "oben-memory" }
oben-transport = { path = "oben-transport" }
oben-gateway = { path = "oben-gateway" }
oben-utils = { path = "oben-utils" }
chrono = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
