[workspace]
members = [
    "oben-agent",
    "oben-transport",
    "oben-models",
    "oben-tools",
    "oben-sessions",
    "oben-skills",
    "oben-gateway",
    "oben-config",
    "oben-utils",
    "oben-goals",
    "oben-curator",
    "oben-tui",
    "oben-cli",
    "oben-scenario-test",
    "oben-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Nous Research"]
repository = "https://github.com/bowfeng/obenagent"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "socks", "stream", "rustls-tls"] }
serde_json = { version = "1", features = ["raw_value"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
itertools = "0.14"
futures = "0.3"
rand = "0.8"
dirs = "5"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions", "unlock_notify", "session"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
textwrap = "0.16"
tempfile = "3"
ctor = "0.2"

[package]
name = "obenagent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The self-improving AI agent — CLI entry point"

[dependencies]
oben-cli = { path = "oben-cli" }
tokio  = { workspace = true }
