[package]
name = "oben-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-models = { path = "../oben-models" }
oben-config = { path = "../oben-config" }
oben-tools = { path = "../oben-tools" }
oben-transport = { path = "../oben-transport" }
oben-skills = { path = "../oben-skills" }
oben-sessions = { path = "../oben-sessions" }

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
itertools.workspace = true
regex.workspace = true
reqwest.workspace = true
dirs.workspace = true
futures.workspace = true
rand.workspace = true
tempfile.workspace = true
parking_lot = "0.12"

[dev-dependencies]
async-trait.workspace = true
