[package]
name = "oben-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI parsing and dispatch for ObenAgent"

[dependencies]
oben-config = { path = "../oben-config" }
oben-models = { path = "../oben-models" }
oben-agent = { path = "../oben-agent" }
oben-tools = { path = "../oben-tools" }
oben-skills = { path = "../oben-skills" }
oben-sessions = { path = "../oben-sessions" }
oben-transport = { path = "../oben-transport" }
oben-utils = { path = "../oben-utils" }
oben-gateway = { path = "../oben-gateway" }
oben-tui = { path = "../oben-tui" }
oben-cron = { path = "../oben-cron" }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
