[package]
name = "oben-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI parsing and dispatch for ObenAgent"

[dependencies]
oben-config = { path = "../oben-config" }
oben-models = { path = "../oben-models" }
oben-agent = { path = "../oben-agent" }
oben-tools = { path = "../oben-tools" }
oben-skills = { path = "../oben-skills" }
oben-sessions = { path = "../oben-sessions" }
oben-transport = { path = "../oben-transport" }
oben-utils = { path = "../oben-utils" }
oben-gateway = { path = "../oben-gateway" }
oben-tui = { path = "../oben-tui" }
oben-cron = { path = "../oben-cron" }
oben-goals = { path = "../oben-goals" }
oben-curator = { path = "../oben-curator" }

clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
daemonize = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
