[package]
name = "oben-config"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
dirs.workspace = true
thiserror.workspace = true
clap.workspace = true
dialoguer.workspace = true
tracing.workspace = true
oben-models = { path = "../oben-models" }
