[package]
name = "oben-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cron scheduler for scheduled agent task delivery"

[[bin]]
name = "oben-cron"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
cron = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs", "time", "macros", "signal"] }
tracing-subscriber = { workspace = true, default-features = true, features = ["fmt"] }

[dev-dependencies]
tempfile.workspace = true
