[package]
name = "oben-curator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
