[package]
name = "oben-curator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
dirs.workspace = true
oben-config = { path = "../oben-config" }
oben-agent = { path = "../oben-agent" }
oben-tools = { path = "../oben-tools" }
oben-models = { path = "../oben-models" }
oben-sessions = { path = "../oben-sessions" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
