[package]
name = "oben-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
whatsapp = []
telegram = ["dep:teloxide"]
discord = ["dep:discordrs"]
slack = []
wasm-plugins = ["dep:oben-wasm"]

[dependencies]
oben-agent = { path = "../oben-agent" }
oben-config = { path = "../oben-config" }
oben-models = { path = "../oben-models" }
oben-platform-sdk = { path = "../oben-platform-sdk" }
oben-sessions = { path = "../oben-sessions" }
oben-tools = { path = "../oben-tools" }

anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util = "0.3"
reqwest.workspace = true
tungstenite = "0.24"

# Tokio-tungstenite for async WebSocket client
# rustls-tls-native-roots enables rustls + native certs
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Tracing subscriber for init_logging in main.rs
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Log file writing (for gateway.log)
tracing-appender = "0.2"

# AES-256-GCM for decrypting QQ bot encrypted secrets (QR onboarding)
aes-gcm = { version = "0.10", features = ["std", "getrandom"] }
# base64 decoding for encrypted secrets from QQ portal API
base64 = "0.22"
# PRNG for bind key generation
rand.workspace = true

# QR code ASCII rendering for terminal display
qrcode = "0.14"

# Direct rustls dependency with ring crypto provider for explicit installation
# hyper-rustls (via tokio-tungstenite) pulls in its own rustls with aws-lc-rs by default.
# Without explicit installation, rustls 0.23+ panics on provider auto-detection.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
qr2term = "0.3.3"

# Telegram Bot SDK (optional, enabled via "telegram" feature)
teloxide = { version = "0.12", optional = true, features = ["auto-send", "macros", "rand"] }

# Discord platform adapter
discordrs = { version = "2.0", optional = true, features = ["gateway", "cache"] }

# Above-wasm platform plugin loader (optional, gated by wasm-plugins feature)
oben-wasm = { path = "../oben-wasm", optional = true }
