[package]
name = "oben-goals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
oben-models = { path = "../oben-models" }
tokio = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[features]
default = []
