[package]
name = "oben-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-models = { path = "../oben-models" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
regex.workspace = true
itertools.workspace = true
