[package]
name = "oben-models"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
