[package]
name = "oben-scenario-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-transport = { path = "../oben-transport" }
oben-sessions = { path = "../oben-sessions" }
oben-agent = { path = "../oben-agent" }
oben-models = { path = "../oben-models" }
oben-utils = { path = "../oben-utils" }

anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serial_test = "3"
