[package]
name = "oben-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-models = { path = "../oben-models" }
oben-config = { path = "../oben-config" }
oben-utils = { path = "../oben-utils" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-trait.workspace = true
regex.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
