[package]
name = "oben-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-models = { path = "../oben-models" }
oben-config = { path = "../oben-config" }
oben-utils = { path = "../oben-utils" }
oben-cron = { path = "../oben-cron" }

anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart", "blocking"] }
async-trait.workspace = true
regex.workspace = true
futures.workspace = true
scraper = "0.18"
urlencoding = "2.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"        # For WAV audio loading (used by whisper-rs)
whisper-rs = { version = "0.16", optional = true, default-features = false }
msedge-tts = { version = "0.4", features = ["tokio-runtime"] }
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
tempfile = "3"
html2text = "0.16"

[features]
default = ["stt-whisper-rs"]
stt-whisper-rs = ["dep:whisper-rs", "whisper-rs/default"]
