[package]
name = "oben-transport"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
oben-models = { path = "../oben-models" }

anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
eventsource-stream = "0.2"
futures-util = { version = "0.3", features = ["io"] }
regex.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6"
serde_yaml.workspace = true
