[package]
name = "oben-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
regex.workspace = true
itertools.workspace = true
arboard.workspace = true
once_cell.workspace = true
url.workspace = true
hostname.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
rand.workspace = true
chrono.workspace = true

[features]
default = []
clipboard = []

[dev-dependencies]
libc = "0.2"
